--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="sticky-nav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="/"><img style="height:40px;" src="/assets/images/logo-1.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -28,42 +28,23 @@
               <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
-                <form class="form-inline">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-                </form>
               </div>
             </nav>
           </div>
-          <div class="header-image">
-            <div class="header-gradient">
-              <div class="row header-2">
-                  <div class="col-md-5 center-col">
-                        <div class="header-1">
-                            <p>Need the Business?</p>
-                        </div>  
-                        <div class="header-3">
-                            <p>Well, I've got the Business for ya!</p>
-                        </div>
-                        <div class="header-4">
-                            <button type="button" class="btn btn-primary">Business</button>
-                        </div>   
-                  </div>
-              </div>
-            </div>
-          </div>
     </header>
+    <div class="row">
+        <div class="col-md-12">
+
+        </div>
+    </div>    
 </body>
 </html>
