completed majority of About page

--- a/index.html
+++ b/index.html
@@ -41,10 +41,21 @@
             </nav>
           </div>
     </header>
-    <div class="row">
-        <div class="col-md-12">
-
+    <main class="container">
+        <div class="row" style="background-color:white; padding:30px;border-radius: 5px;">
+            <div class="col-md-12">
+                <h1 style="border-bottom: 2px solid gray; margin-bottom:20px;">About Me</h1>
+                <div class="row">
+                    <div class="col-12 col-xs-12 col-sm-7 col-md-5 col-lg-3 col-xl-3 mb-3" style="text-align:center; float:none; margin:auto;">
+                        <img style="width:100%;" src="/assets/images/photo-1.jpeg" alt="potrtait photo">
+                    </div>
+                    <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-9 col-xl-9">
+                        <p>Hello. My name is Dave and I work as a full-stack web developer. I have worked on projects ranging from full PHP/LAMP stack deployment of web applications, to PHP system migration, to front-end design & maintenance with HTML5, CSS, Javascript, JQuery, Drupal, and Wordpress.</p>
+                        <p>When I'm not expanding my development toolbelt, I enjoy travelling in a self-converted Van/RV and curating a pretty impressive film collection. (if I do say so myself).</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>    
+    </main>    
 </body>
 </html>
