--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <header>
         <div class="sticky-nav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="/"><img style="height:40px;" src="/assets/images/logo-1.png" alt="logo"></a>
+              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img style="height:40px;" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -28,10 +28,10 @@
               <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="/">About</a>
+                    <a class="nav-link" href="https://diembe.github.io/Responsive-Portfolio/">About</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -41,10 +41,47 @@
             </nav>
           </div>
     </header>
-    <div class="row">
-        <div class="col-md-12">
-
+    <main class="container">
+        <div class="row about-1">
+            <div class="col-md-12">
+                <h1 class="about-2">Portfolio</h1>
+                <div class="row">
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/coding-1.jpg" alt="coding photo">
+                                <!-- Photo by Lukas from Pexels -->
+                            </div>
+                            <div class="col-12" style="position: absolute;bottom: 0;">
+                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">LAMP Stack</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/pattern-3.png" alt="coding photo">
+                                <!-- Photo by gdtography from Pexels, drupal.org, wordpress.org -->
+                            </div>
+                            <div class="col-12" style="position: absolute;bottom: 0;">
+                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Drupal & Wordpress</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/film-1.jpg" alt="coding photo">
+                                <!-- Photo by Nathan Engel from Pexels -->
+                            </div>
+                            <div class="col-12" style="position: absolute;bottom: 0;">
+                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Film Collection</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>    
+    </main>    
 </body>
 </html>
