--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             <div class="col-md-12">
                 <h1 class="about-2">Portfolio</h1>
                 <div class="row">
-                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
                                 <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/coding-1.jpg" alt="coding photo">
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
                                 <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/pattern-3.png" alt="coding photo">
@@ -68,14 +68,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
                                 <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/film-1.jpg" alt="coding photo">
                                 <!-- Photo by Nathan Engel from Pexels -->
                             </div>
                             <div class="col-12" style="position: absolute;bottom: 0;">
-                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Film Collection</p>
+                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Film Curation Application</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="about-4" src="/assets/images/van-1.jpg" alt="coding photo">
+                                <!-- Photo by Alfonso Escalante from Pexels -->
+                            </div>
+                            <div class="col-12" style="position: absolute;bottom: 0;">
+                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Van Customization Application</p>
                             </div>
                         </div>
                     </div>
