additional changes to Portfolio page. Cropped images.

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,11 +82,22 @@
                     <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
-                                <img class="about-4" src="/assets/images/van-1.jpg" alt="coding photo">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/van-1.jpg" alt="coding photo">
                                 <!-- Photo by Alfonso Escalante from Pexels -->
                             </div>
                             <div class="col-12" style="position: absolute;bottom: 0;">
                                 <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Van Customization Application</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/hello-1.jpg" alt="coding photo">
+                                <!-- Photo by Tyler Lastovich from Pexels -->
+                            </div>
+                            <div class="col-12" style="position: absolute;bottom: 0;">
+                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Hello World</p>
                             </div>
                         </div>
                     </div>
