added footer & JS scrollToTop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/reboot.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     
@@ -56,6 +57,10 @@
                 </div>
             </div>
         </div>
-    </main>    
+    </main>
+    <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify">
+        <p class="footer-padding">Made by Dave Bean</p>
+    </footer>
+    <a href="javascript:;" class="scrollToTop" style="display: block;"><i class="fa fa-angle-up"></i></a>
 </body>
 </html>
