fixed small error from W3C validation

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         <form>
                             <div class="form-group">
                               <label for="inputName">Name</label>
-                              <input type="text" class="form-control" id="inputName" aria-describedby="nameHelp">
+                              <input type="text" class="form-control" id="inputName" aria-describedby="inputName">
                             </div>
                             <div class="form-group">
                               <label for="inputEmail">Email</label>
