added comments, removed inline styling, general cleanup

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,11 @@
     <title>Responsive Portfolio</title>
 </head>
 <body>
+    <!-- Nav -->
     <header>
         <div class="sticky-nav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img style="height:40px;" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
+              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,6 +44,7 @@
             </nav>
           </div>
     </header>
+    <!-- Main content -->
     <main class="container">
         <div class="row about-1">
             <div class="col-md-12">
@@ -54,62 +56,64 @@
                                 <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/coding-1.jpg" alt="coding photo">
                                 <!-- Photo by Lukas from Pexels -->
                             </div>
-                            <div class="col-12" style="position: absolute;bottom: 0;">
-                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">LAMP Stack</p>
+                            <div class="col-12 banner-1">
+                                <p class="banner-2">LAMP Stack</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
-                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/pattern-3.png" alt="coding photo">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/pattern-3.png" alt="wordpress & drupal">
                                 <!-- Photo by gdtography from Pexels, drupal.org, wordpress.org -->
                             </div>
-                            <div class="col-12" style="position: absolute;bottom: 0;">
-                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Drupal & Wordpress</p>
+                            <div class="col-12 banner-1">
+                                <p class="banner-2">Drupal & Wordpress</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
-                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/film-1.jpg" alt="coding photo">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/film-1.jpg" alt="film curation">
                                 <!-- Photo by Nathan Engel from Pexels -->
                             </div>
-                            <div class="col-12" style="position: absolute;bottom: 0;">
-                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Film Curation Application</p>
+                            <div class="col-12 banner-1">
+                                <p class="banner-2">Film Curation Application</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
-                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/van-1.jpg" alt="coding photo">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/van-1.jpg" alt="van design">
                                 <!-- Photo by Alfonso Escalante from Pexels -->
                             </div>
-                            <div class="col-12" style="position: absolute;bottom: 0;">
-                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Van Customization Application</p>
+                            <div class="col-12 banner-1">
+                                <p class="banner-2">Van Customization Application</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
                         <div class="row">
                             <div class="col-12">
-                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/hello-1.jpg" alt="coding photo">
+                                <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/hello-1.jpg" alt="hello world">
                                 <!-- Photo by Tyler Lastovich from Pexels -->
                             </div>
-                            <div class="col-12" style="position: absolute;bottom: 0;">
-                                <p style="padding:10px; background-color:rgba(47, 80, 107, 0.6901960784313725); text-align:center; color:white;">Hello World</p>
+                            <div class="col-12 banner-1">
+                                <p class="banner-2">Hello World</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </main>    
+    </main>
+    <!-- Footer -->    
     <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify">
         <p class="footer-padding">Made by Dave Bean</p>
     </footer>
-    <div onclick="smoothscroll()" class="scrollToTop" style="display: block;"><i class="fa fa-angle-up"></i></div>
+    <!-- Javascript scroll to top of page -->
+    <div onclick="smoothscroll()" class="scrollToTop"><i class="fa fa-angle-up"></i></div>
 </body>
 </html>
