--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <title>Responsive Portfolio</title>
 </head>
 <body>
+    <!-- Nav bar -->
     <header>
         <div class="sticky-nav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img style="height:40px;" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
+              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,6 +44,7 @@
             </nav>
           </div>
     </header>
+    <!-- Main content -->
     <main class="container">
         <div class="row about-1">
             <div class="col-md-12">
@@ -59,9 +61,11 @@
             </div>
         </div>
     </main>
+    <!-- Footer -->
     <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify">
         <p class="footer-padding">Made by Dave Bean</p>
     </footer>
-    <div onclick="smoothscroll()" class="scrollToTop" style="display: block;"><i class="fa fa-angle-up"></i></div>
+    <!-- Javascript scroll to top of page button -->
+    <div onclick="smoothscroll()" class="scrollToTop"><i class="fa fa-angle-up"></i></div>
 </body>
 </html>
