--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-9 col-xl-9">
                         <p>Hello. My name is Dave and I work as a full-stack web developer. I have worked on projects ranging from full PHP/LAMP stack deployment of web applications, to PHP system migration, to front-end design & maintenance with HTML5, CSS, Javascript, JQuery, Drupal, and Wordpress.</p>
-                        <p>When I'm not expanding my development toolbelt, I enjoy travelling in a self-converted Van/RV and curating a pretty impressive film collection. (if I do say so myself).</p>
+                        <p>When I'm not expanding my development toolbelt, I enjoy travelling in a self-converted Van/RV and curating a pretty impressive film collection (if I do say so myself).</p>
                     </div>
                 </div>
             </div>
