additional small changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
         </div>
     </main>
     <!-- Footer -->    
-    <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify">
+    <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify footer-1">
         <p class="footer-padding">Made by Dave Bean</p>
     </footer>
     <!-- Javascript scroll to top of page -->
