--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
           </div>
     </header>
     <!-- Main content -->
-    <main class="">
+    <main class="main-1">
         <div class="row">
             <div class="col-10 col-xs-10 col-sm-10 col-md-8 col-lg-7 col-xl-6 about-1 center-col">
                 <h1 class="about-2">Contact</h1>
@@ -77,7 +77,7 @@
         </div>
     </main>
     <!-- Footer -->    
-    <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify">
+    <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify footer-1">
         <p class="footer-padding">Made by Dave Bean</p>
     </footer>
     <!-- Javascript scroll to top of page button -->
