--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
 <body>
     <!-- Nav bar -->
     <header>
-        <div class="sticky-nav">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-          
-              <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="https://diembe.github.io/Responsive-Portfolio/">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-    </header>
+      <div class="sticky-nav">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+        
+            <div class="collapse navbar-collapse" id="navbarColor01">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="https://diembe.github.io/Responsive-Portfolio/">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+  </header>
     <!-- Main content -->
     <main class="container">
         <div class="row about-1">
@@ -62,7 +62,7 @@
         </div>
     </main>
     <!-- Footer -->
-    <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify">
+    <footer class="sticky-nav navbar navbar-expand-lg navbar-dark bg-dark p-no-margin-bot footer-justify footer-1">
         <p class="footer-padding">Made by Dave Bean</p>
     </footer>
     <!-- Javascript scroll to top of page button -->
