--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/reboot.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
+	<link rel="stylesheet" href="assets/css/custom.css">
+	
+	<link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -54,8 +61,13 @@
                         <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/photo-1.jpeg" alt="potrtait photo">
                     </div>
                     <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-9 col-xl-9">
-                        <p>Hello. My name is Dave and I work as a full-stack web developer. I have worked on projects ranging from full PHP/LAMP stack deployment of web applications, to PHP system migration, to front-end design & maintenance with HTML5, CSS, Javascript, JQuery, Drupal, and Wordpress.</p>
-                        <p>When I'm not expanding my development toolbelt, I enjoy travelling in a self-converted Van/RV and curating a pretty impressive film collection (if I do say so myself).</p>
+                        <p>Hello. My name is Dave and I work as a Full-Stack Web Developer. I have worked on projects ranging from full PHP/LAMP stack deployment of web applications, to PHP system migration, to front-end design & maintenance with HTML5, CSS, Javascript, JQuery, Drupal, and Wordpress.</p>
+						<p>I'm currently adding the MERN stack to my toolbelt and look forward to tackling additional technologies as the opportunity presents itself.</p>
+						<p>When I'm not expanding my development toolbelt, I enjoy travelling in a self-converted Van/RV and curating a pretty impressive film collection (if I do say so myself).</p>
+						<a class="nav-link" href="https://github.com/diembe" target="_blank" style="display:inline-block; font-size:30px;"><i
+							class="fab fa-github fa-lg contact-icon"></i></a><a class="nav-link"
+						  href="https://www.linkedin.com/in/dave-m-bean/" target="_blank" style="display:inline-block; font-size:30px;"><i
+							class="fab fa-linkedin fa-lg contact-icon"></i></a>
                     </div>
                 </div>
             </div>
