--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <header>
         <div class="sticky-nav">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
+              <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="assets/images/logo-1.png" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
