--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <div class="sticky-nav">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="https://diembe.github.io/Responsive-Portfolio/assets/images/logo-1.png" alt="logo"></a>
+            <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="assets/images/logo-1.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -58,7 +58,7 @@
                 <h1 class="about-2">About Me</h1>
                 <div class="row">
                     <div class="col-12 col-xs-12 col-sm-7 col-md-5 col-lg-3 col-xl-3 mb-3 about-3">
-                        <img class="about-4" src="https://diembe.github.io/Responsive-Portfolio/assets/images/photo-1.jpeg" alt="potrtait photo">
+                        <img class="about-4" src="assets/images/photo-1.jpeg" alt="potrtait photo">
                     </div>
                     <div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-9 col-xl-9">
                         <p>Hello. My name is Dave and I work as a Full-Stack Web Developer. I have worked on projects ranging from full PHP/LAMP stack deployment of web applications, to PHP system migration, to front-end design & maintenance with HTML5, CSS, Javascript, JQuery, Drupal, and Wordpress.</p>
