--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <div class="sticky-nav">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="https://diembe.github.io/Responsive-Portfolio/"><img class="nav-image" src="assets/images/logo-1.png" alt="logo"></a>
+            <a class="navbar-brand" href="https://diembe.github.io/Portfolio/"><img class="nav-image" src="assets/images/logo-1.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="https://diembe.github.io/Responsive-Portfolio/">About</a>
+                  <a class="nav-link" href="https://diembe.github.io/Portfolio/">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html">Portfolio</a>
