added a few links

--- a/index.html
+++ b/index.html
@@ -64,10 +64,17 @@
                         <p>Hello. My name is Dave and I work as a Full-Stack Web Developer. I have worked on projects ranging from full PHP/LAMP stack deployment of web applications, to PHP system migration, to front-end design & maintenance with HTML5, CSS, Javascript, JQuery, Drupal, and Wordpress.</p>
 						<p>I'm currently adding the MERN stack to my toolbelt and look forward to tackling additional technologies as the opportunity presents itself.</p>
 						<p>When I'm not expanding my development toolbelt, I enjoy travelling in a self-converted Van/RV and curating a pretty impressive film collection (if I do say so myself).</p>
-						<a class="nav-link" href="https://github.com/diembe" target="_blank" style="display:inline-block; font-size:30px;"><i
-							class="fab fa-github fa-lg contact-icon"></i></a><a class="nav-link"
-						  href="https://www.linkedin.com/in/dave-m-bean/" target="_blank" style="display:inline-block; font-size:30px;"><i
-							class="fab fa-linkedin fa-lg contact-icon"></i></a>
+						<a class="nav-link" href="https://github.com/diembe" target="_blank" style="display:inline-block; font-size:30px;">
+							<i class="fab fa-github fa-lg contact-icon"></i>
+						</a>
+						<a class="nav-link" href="https://www.linkedin.com/in/dave-m-bean/" target="_blank" style="display:inline-block; font-size:30px;">
+							<i class="fab fa-linkedin fa-lg contact-icon"></i>
+						</a>
+						<a class="nav-link" href="assets/other/Dave_Bean_Resume.pdf" target="_blank" style="display:inline-block; font-size:40px;">
+							<i class="fa fa-file-text"></i>
+						</a>
+						<a class="nav-link" href="mailto:contact@davebean.net" target="_blank" style="display:inline-block; font-size: 20px;">contact@davebean.net</a>
+						<a class="nav-link" href="tel:8018676846" target="_blank" style="display:inline-block; font-size: 20px;">801.867.6846</a>
                     </div>
                 </div>
             </div>
