--- a/portfolio.html
+++ b/portfolio.html
@@ -104,10 +104,11 @@
 				</div>
 			</div>
 			<a href="https://eelektrick.github.io/8-bit-bartender/">
-				<button type="button" class="btn btn-primary" style="margin-right:auto; margin-left:auto; display:block; margin-top:30px; margin-bottom:30px;">
+				<button type="button" class="btn btn-primary" style="margin-right:auto; margin-left:auto; display:block; margin-top:30px; margin-bottom:20px;">
 					Try it out here
 				</button>
 			</a>
+			<a href="https://github.com/Eelektrick/8-bit-bartender" target="_blank" style="text-align:center; display:block; margin-bottom:20px;">Github Repository</a>
 		<div class="modal-footer">
 		  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 		</div>
@@ -137,10 +138,11 @@
 				</div>
 			</div>
 			<a href="https://diembe.github.io/Code-Quiz/">
-				<button type="button" class="btn btn-primary" style="margin-right:auto; margin-left:auto; display:block; margin-top:30px; margin-bottom:30px;">
+				<button type="button" class="btn btn-primary" style="margin-right:auto; margin-left:auto; display:block; margin-top:30px; margin-bottom:20px;">
 					Try it out here
 				</button>
 			</a>
+			<a href="https://github.com/diembe/Code-Quiz" target="_blank" style="text-align:center; display:block; margin-bottom:20px;">Github Repository</a>
 		<div class="modal-footer">
 		  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 		</div>
@@ -170,10 +172,11 @@
 					</div>
 				</div>
 				<a href="https://diembe.github.io/Weather-Dashboard/">
-					<button type="button" class="btn btn-primary" style="margin-right:auto; margin-left:auto; display:block; margin-top:30px; margin-bottom:30px;">
+					<button type="button" class="btn btn-primary" style="margin-right:auto; margin-left:auto; display:block; margin-top:30px; margin-bottom:20px;">
 						Try it out here
 					</button>
 				</a>
+				<a href="https://github.com/diembe/Weather-Dashboard" target="_blank" style="text-align:center; display:block; margin-bottom:20px;">Github Repository</a>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 			</div>
