--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<a class="nav-link" href="https://www.linkedin.com/in/dave-m-bean/" target="_blank" style="display:inline-block; font-size:30px;">
 							<i class="fab fa-linkedin fa-lg contact-icon"></i>
 						</a>
-						<a class="nav-link" href="assets/other/Dave_Bean_Resume.pdf" target="_blank" style="display:inline-block; font-size:40px;">
+						<a class="nav-link" href="assets/other/Dave_Bean_Resume_09.17.20.pdf" target="_blank" style="display:inline-block; font-size:40px;">
 							<i class="fa fa-file-text"></i>
 						</a>
 						<a class="nav-link" href="mailto:contact@davebean.net" target="_blank" style="display:inline-block; font-size: 20px;">contact@davebean.net</a>
